<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Basic Todo</string>
    <string name="action_settings">Settings</string>
    <string name="action_clear">Clear completed</string>
    <string name="action_sort">Sort order</string>
    <string name="sort_by_newest">Newest first</string>
    <string name="sort_by_oldest">Oldest first</string>

    <!-- AlarmPad extension -->
    <string name="extension_title">Basic Todo Extension</string>
    <string name="extension_description">See your Todo items when the alarm rings.</string>
    <string name="pref_speak_before">Sentence to speak before the todo</string>
    <string name="pref_speak_before_default">You have</string>
    <string name="pref_speak_after">Sentence to speak after the todo</string>
    <string name="pref_speak_after_default">Tasks</string>
     <string name="pref_count_only">Show count only</string>
    <string name="title_settings">Todo Settings</string>
    <string name="add">Add</string>
    <string name="add_todo">Add Todo</string>
    <string name="speech_input">Speech input</string>
    <string name="action_clear_all">Clear all todo\'s</string>
    <string name="action_about">About</string>

</resources>