<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.samvandenberge.todoalarmpad.MainActivity" >

    <item
        android:id="@+id/action_sort_by_menu"
        android:icon="@drawable/ic_action_sort_by_size"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/action_sort">
        <menu>
            <group android:checkableBehavior="single" >
                <item
                    android:id="@+id/action_sort_by_time_added"
                    android:checked="true"
                    android:title="@string/sort_by_newest"/>
                <item
                    android:id="@+id/action_sort_by_manual"
                    android:title="@string/sort_manually"/>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/action_clear_completed"
        android:icon="@drawable/ic_action_discard"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        android:title="@string/action_clear"/>

</menu>